Concluído componente base de Alerta

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,7 @@ body, html {
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 * {
@@ -17,4 +18,9 @@ body, html {
 :root {
   --color-primary: #f95d01;
   --color-secondary: #ce4c00;
+
+  --color-alert-error: #8c0000;
+  --color-alert-success: #158c00;
+  --color-alert-warning: #f95d01;
+  --color-alert-info: #0c008c;
 }
