Concluído o sistema de alertas

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,7 +19,7 @@ body, html {
   --color-primary: #f95d01;
   --color-secondary: #ce4c00;
 
-  --color-alert-error: #8c0000;
+  --color-alert-error: #af0000;
   --color-alert-success: #158c00;
   --color-alert-warning: #f95d01;
   --color-alert-info: #0c008c;
